@@ -139,7 +139,7 @@
      <x>0</x>
      <y>0</y>
      <width>552</width>
-     <height>20</height>
+     <height>24</height>
     </rect>
    </property>
    <property name="contextMenuPolicy">
@@ -175,7 +175,7 @@
      <string>&amp;File</string>
     </property>
     <addaction name="actionGetNews"/>
-    <addaction name="actionSyncPackages"/>
+    <addaction name="actionCheckUpdates"/>
     <addaction name="actionSystemUpgrade"/>
     <addaction name="separator"/>
     <addaction name="actionInstallLocalPackage"/>
@@ -272,7 +272,7 @@
     <string>Ctrl+E</string>
    </property>
   </action>
-  <action name="actionSyncPackages">
+  <action name="actionCheckUpdates">
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/resources/images/refresh.png</normaloff>:/resources/images/refresh.png</iconset>
@@ -281,7 +281,7 @@
     <string>&amp;Check updates</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+D</string>
+    <string>Ctrl+K</string>
    </property>
   </action>
   <action name="actionExit">
