@@ -3,6 +3,7 @@
   BugFix: Test also if doas.conf is available at startup.
   BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
   BugFix: Updated FreeBSD rss url.
+  Changed "Sync database" option name to "Check updates".
 
 0.3.1 (2020/10/29)
   Added "Installed On" column on installed package list.
